--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -10,3 +10,14 @@ ja:
           now_at_work: "製作中"
           shopping_preparation: "発送準備中"
           shopped: "発送済み"
+      
+    enums:    
+      order_detail:
+        tyakusyuhuka: "着手不可"
+        tyakusyumati: "製作待ち"
+        seisakutyuu: "製作中"
+        seisakukanryou: "製作完了完了"
+          
+    time:
+      formats:
+        default: "%Y/%m/%d %H:%M:%S"
